fix(sidenav): ensure dropdown menu display matches collapse state

--- a/src/Sidenav/styles/index.scss
+++ b/src/Sidenav/styles/index.scss
@@ -119,6 +119,14 @@
     .rs-dropdown-item-collapse-icon {
       transform: rotate(90deg);
     }
+
+    > .rs-dropdown-menu.rs-dropdown-menu-collapse-out {
+      display: none;
+    }
+
+    > .rs-dropdown-menu.rs-dropdown-menu-collapse-in {
+      display: flex;
+    }
   }
 
   .rs-dropdown-item {
